# focus-event

./: .gitignore  CMakeLists.txt  README.md  config.example.kdl  flake.nix
nix/: default.nix  home-manager.nix  lib.nix  wrapper-system.sh
nix/modules/: system.nix  user.nix
nix/test/: eval-system.nix  eval-user.nix  eval.nix
src/: config.hpp  engine.cpp  engine.hpp  epoll.hpp  executor_main.cpp  main.cpp  niri.hpp  subprocess.cpp  trigger_main.cpp
src/lib/: config.cpp  engine.cpp  engine.hpp  epoll.cpp  kdl.cpp  kdl.hpp  log.hpp  niri.cpp  protocol.hpp  subprocess.hpp  uds.cpp  uds.hpp
